pub/sub working correctly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,30 @@ services:
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+
+      # listeners
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,OUTSIDE://:19092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,OUTSIDE://localhost:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,OUTSIDE:PLAINTEXT,CONTROLLER:PLAINTEXT
+
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+
+      # storage (use ONE dir; this matches the mounted volume)
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
+
+      # single-broker factors
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_NUM_PARTITIONS: 3
-      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+
+      # KRaft cluster id (22-char Base64-like). Keep it stable across restarts.
+      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"   # ok for dev
+
     ports:
-      - "9092:9092"
+      - "19092:19092"   # host -> OUTSIDE
     volumes:
       - kafka-data:/var/lib/kafka/data
 
@@ -29,7 +40,7 @@ services:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "localhost:9092"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:9092"  # use internal listener
 
 volumes:
   kafka-data:
