--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,8 @@ tornado==6.5.2
 traitlets==5.14.3
 tzdata==2025.2
 wcwidth==0.2.14
+pytest==8.0.0
+pytest-mock==3.14.0
+requests==2.32.5
+mlflow==3.6.0
+scikit-learn==1.7.2
